added preliminary inspector

--- a/views/index.erb
+++ b/views/index.erb
@@ -29,6 +29,7 @@
     <script src="js/FacetNumberrangeView.js"></script>
     <script src="js/FacetStringView.js"></script>
     <script src="js/GridView.js"></script>
+    <script src="js/InspectorView.js"></script>
     <script src="js/SwivelView.js"></script>
     <script src="js/Tile.js"></script>
     <script src="js/ToolbarView.js"></script>
