adding a css fix to make the jasmine tests look good

--- a/public/css/swivel.css
+++ b/public/css/swivel.css
@@ -10,3 +10,8 @@
   font-size: 15px;
   text-anchor: middle;
 }
+  <style type="text/css">
+      .banner label {
+                display:inline;
+                    }
+                      </style>
